# journal_observer

./: .env.tmpl  .gitignore  Cargo.toml  README.md  targets.yml
.github/workflows/: deploy.yml
src/: consts.rs  discord.rs  logger.rs  macros.rs  main.rs  mjournal.rs  target_log.rs  watch_warp.rs
stub/: run_test_echo.sh  test_echo.service.tmpl
