[package]
name = "journal_observer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
flexi_logger = "0.31.2"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
systemd = "0.10.0"
dotenvy = "0.15.7"
tokio = { version = "1.46.1", features = ["full"] }
notify = "8.1.0"
tokio-util = "0.7.15"
